@@ -37,7 +37,6 @@ import org.springframework.data.jpa.repository.JpaRepository;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public abstract class BasicInsertableController<ENTITY, DTO extends ElementDTO, REPOSITORY extends JpaRepository<ENTITY, Integer>,
         PROVIDER extends CrudProvider<ENTITY, Integer, REPOSITORY>, CONVERTER_REQUEST extends ConverterRequest<ENTITY>,
@@ -129,7 +128,7 @@ public abstract class BasicInsertableController<ENTITY, DTO extends ElementDTO, 
     }
 
     protected List<DTO> convertAll(Collection<ENTITY> entities) {
-        return converter.convertAll(entities.stream().map(this::createConverterRequest).collect(Collectors.toList()));
+        return converter.convertAll(entities.stream().map(this::createConverterRequest).toList());
     }
 
     protected List<ENTITY> reverseAll(Collection<DTO> dtos) {
